--- a/build.xml
+++ b/build.xml
@@ -10,7 +10,7 @@
   
   <target name="compile" depends="clean">
     <mkdir dir="classes" />
-    <javac destdir="classes" target="6" optimize="yes" encoding="UTF-8" includeantruntime="false">
+    <javac destdir="classes" target="6" optimize="yes" encoding="UTF-8" includeantruntime="false" debug="true" debuglevel="lines, vars, source">
       <src path="src"/>
       <src path="src_generic"/>
       <src path="src_x11"/>
